# esun-ai-competition-2025

./: .gitignore  CLAUDE.md  README.md  TransactionAlertClassifier.py  best_model.pth  eda.md  get_dataset.sh  main.py  pyproject.toml  time_series_result.csv
analysis/: count_transactions.py  currency_converter.py  filter_transactions.py  generate_report.py  generated_report.md  get_transactions_by_id.py  time_series_report.md  verify_report.py
src/: AlertPatternDetector.py  FeatureEngineeringModeling.py  RuleBasedAlertClassifier.py  TimeSeriesAlertClassifier.py  TransactionAlertClassifier.py  TransactionAlertClassifierDL.py
submissions/: 006.csv
