[project]
name = "esun-ai-competition-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "imbalanced-learn>=0.12.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
